<resources>
    <string name="app_name">Carcare</string>
    <string name="title_home">Home</string>
    <string name="title_fuelups">Fuelups</string>
    <string name="title_services">Services</string>
    <string name="title_location">Location</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
