<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_fuelups"
        android:icon="@drawable/ic_battery_full_black_24dp"
        android:title="@string/title_fuelups"/>

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_room_service_black_24dp"
        android:title="@string/title_services"/>

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_location"/>
    <item
        android:id="@+id/navigation_settins"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings"/>

</menu>